--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,12 +2,15 @@
 domain: example.com
 port:                 # default 12580
 
-# source list file
+# source definition file
 source-files:
-  # use local file
-  - ./config/source.yaml
-  # use web file
-  # - https://example.com/config/source.yaml
+ # use local file
+ - ./config/source.yaml
+ # use web file
+ - https://raw.githubusercontent.com/Alex950808/proxypool038/master/config/source.yaml
+ - https://raw.githubusercontent.com/wishcaiji/proxypool/master/config/source.yaml
+ - https://raw.githubusercontent.com/money-fly/proxypool/master/config/source.yaml
+ - https://raw.githubusercontent.com/grxp/proxypool/master/config/source.yaml
 
 # ======= 可选项，留空使用default值  =======
 
@@ -15,18 +18,18 @@ source-files:
 database_url: ""
 
 # interval between each crawling
-crawl-interval:       # v0.5.x default 60 (minutes)
-crontime:             # v0.4.x default 60 (minutes). Deprecated in the newest version
+cron-interval:        #  v0.5.x default 60 (minutes)
+crontime:             #  v0.4.x default 60 (minutes). Deprecated in the newiest version
 
 # speed test
-speedtest: false      # default false. Warning: this will consume large network resources.
-speedtest-interval:   # default 720 (min)
+speedtest: true       # default false. Warning: this will consume large network resources.
+speedtest-interval:   # default 12 (hours)
 connection:           # default 5. The number of speed test connections simultaneously
 timeout:              # default 10 (seconds).
-## active proxy speed test
-active-interval:      # default 60 (min)
-active-frequency:     # default 100 (requests per interval)
-active-max-number:    # default 100. If more than this number of active proxies, the extra will be deprecated by speed
+
+# active proxy check
+active-interval:      # default 1 (hour)
+active-frequency:     # default 100 (requests per hour)
 
 # cloudflare api
 cf_email: ""
