--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,6 @@
 # your domain
 domain: example.com
-port:                 # default 12580
+port:  80               # default 12580
 
 # source definition file
 source-files:
