--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,16 +1,17 @@
 # your domain
 domain: example.com
-port:  80               # default 12580
+port:                 # default 12580
 
-# source definition file
+# source list file
 source-files:
- # use local file
- - ./config/source.yaml
- # use web file
+  # use local file
+  - ./config/source.yaml
+  # use web file
  - https://raw.githubusercontent.com/Alex950808/proxypool038/master/config/source.yaml
  - https://raw.githubusercontent.com/wishcaiji/proxypool/master/config/source.yaml
  - https://raw.githubusercontent.com/money-fly/proxypool/master/config/source.yaml
  - https://raw.githubusercontent.com/grxp/proxypool/master/config/source.yaml
+ - https://raw.fastgit.org/kukuyu488704/proxypool/master/config/source.yaml
 
 # ======= 可选项，留空使用default值  =======
 
@@ -18,18 +19,18 @@ source-files:
 database_url: ""
 
 # interval between each crawling
-cron-interval:        #  v0.5.x default 60 (minutes)
-crontime:             #  v0.4.x default 60 (minutes). Deprecated in the newiest version
+crawl-interval:       # v0.5.x default 60 (minutes)
+crontime:             # v0.4.x default 60 (minutes). Deprecated in the newest version
 
 # speed test
-speedtest: true       # default false. Warning: this will consume large network resources.
-speedtest-interval:   # default 12 (hours)
+speedtest: false      # default false. Warning: this will consume large network resources.
+speedtest-interval:   # default 720 (min)
 connection:           # default 5. The number of speed test connections simultaneously
 timeout:              # default 10 (seconds).
-
-# active proxy check
-active-interval:      # default 1 (hour)
-active-frequency:     # default 100 (requests per hour)
+## active proxy speed test
+active-interval:      # default 60 (min)
+active-frequency:     # default 100 (requests per interval)
+active-max-number:    # default 100. If more than this number of active proxies, the extra will be deprecated by speed
 
 # cloudflare api
 cf_email: ""
